--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,13 +9,13 @@ export(output_data)
 export(plot)
 export(run_app)
 import(KFAS)
+import(aegis)
 import(bslib)
 import(cli)
 import(dplyr)
 import(forcats)
 import(httr2)
 import(lubridate)
-import(pergamos)
 import(plumber)
 import(purrr)
 import(shiny)
