--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,7 +36,7 @@ Imports:
     scales,
     cachem,
     openssl,
-    pergamos (>= 0.1.1),
+    aegis (>= 0.0.1),
     RPostgres,
     cli,
     pool,
@@ -45,4 +45,4 @@ Imports:
     later
 Remotes:
     robonomist/roboplotr,
-    robonomist/pergamos
+    itkonen/aegis
