--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    image: postgres:16
+    image: postgres:17
     container_name: postgres
     restart: unless-stopped
     env_file: .env
@@ -9,7 +9,7 @@ services:
     volumes:
       - pgdata:/home/juha/workspace/sofrosyne/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U appuser -d appdb"]
+      test: ["CMD-SHELL", "pg_isready -U admin -d sofrosyne"]
       interval: 5s
       timeout: 5s
       retries: 20
